Добавил метод findPostPublic и сделал метод универсальным getPublicPost ,findPublicProfile