@@ -7,9 +7,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import peakspace.dto.request.PublicRequest;
-import peakspace.dto.response.PublicPhotoAndVideoResponse;
-import peakspace.dto.response.PublicProfileResponse;
-import peakspace.dto.response.SimpleResponse;
+import peakspace.dto.response.*;
 import peakspace.entities.Link_Publication;
 import peakspace.entities.PablicProfile;
 import peakspace.entities.Publication;
@@ -17,7 +15,9 @@ import peakspace.entities.User;
 import peakspace.enums.Choise;
 import peakspace.enums.Role;
 import peakspace.exception.NotFoundException;
+import peakspace.repository.CommentRepository;
 import peakspace.repository.PublicProfileRepository;
+import peakspace.repository.PublicationRepository;
 import peakspace.repository.UserRepository;
 import peakspace.service.PublicProfileService;
 import java.util.HashMap;
@@ -31,6 +31,8 @@ public class PublicProfileServiceImpl implements PublicProfileService {
 
     private final PublicProfileRepository publicProfileRepository;
     private final UserRepository userRepository;
+    private final PublicationRepository publicationRepository;
+    private final CommentRepository commentRepository;
 
     @Override
     @Transactional
@@ -83,37 +85,36 @@ public class PublicProfileServiceImpl implements PublicProfileService {
                 .build();
     }
 
-    @Override
-    public PublicProfileResponse findPublicProfile() {
-        User currentUser = getCurrentUser();
-        if (currentUser.getPablicProfiles() == null) {
-            throw new NotFoundException(" Not found public !");
+        @Override
+        public PublicProfileResponse findPublicProfile(Long publicId,Long userId) {
+            PablicProfile publicProfile = publicProfileRepository.findById(publicId).orElseThrow(() -> new NotFoundException(" Нет такой паблик !"));
+            userRepository.findByIds(userId);
+            return PublicProfileResponse.builder()
+                    .publicId(publicProfile.getId())
+                    .cover(publicProfile.getCover())
+                    .avatar(publicProfile.getAvatar())
+                    .pablicName(publicProfile.getPablicName())
+                    .tematica(publicProfile.getTematica())
+                    .countFollower(publicProfile.getUsers().size())
+                    .build();
         }
-        return PublicProfileResponse.builder()
-                .publicId(currentUser.getPablicProfiles().getId())
-                .cover(currentUser.getPablicProfiles().getCover())
-                .avatar(currentUser.getPablicProfiles().getAvatar())
-                .pablicName(currentUser.getPablicProfiles().getPablicName())
-                .tematica(currentUser.getPablicProfiles().getTematica())
-                .countFollower(currentUser.getPablicProfiles().getUsers().size())
-                .build();
-    }
 
     @Override
-    public List<PublicPhotoAndVideoResponse> getPublicPost(Choise choise) {
-        User currentUser = getCurrentUser();
-        Map<Long, String> publics;
+    public List<PublicPhotoAndVideoResponse> getPublicPost(Choise choise,Long publicId,Long userId) {
+        PablicProfile publicProfile = publicProfileRepository.findById(publicId).orElseThrow(() -> new NotFoundException(" Нет такой паблик !"));
+        userRepository.findByIds(userId);
 
-        if (currentUser.getPablicProfiles() != null) {
+        Map<Long, String> publics = new HashMap<>();
+
+        if (publicProfile != null) {
             switch (choise) {
                 case Photos:
                 case Videos:
-
-                    publics = currentUser.getPablicProfiles().getPublications().stream()
+                    publics = publicProfile.getPublications().stream()
                             .filter(publication -> {
                                 List<String> links = publication.getLinkPublications().stream()
                                         .map(Link_Publication::getLink)
-                                        .collect(Collectors.toList()).reversed();
+                                        .toList();
                                 return (choise == Choise.Photos) && links.stream()
                                         .anyMatch(link -> link.endsWith(".jpg") || link.endsWith(".img") || link.endsWith(".raw"))
                                         || (choise == Choise.Videos) && links.stream()
@@ -122,14 +123,34 @@ public class PublicProfileServiceImpl implements PublicProfileService {
                             .collect(Collectors.toMap(Publication::getId, publication -> publication.getLinkPublications().getFirst().getLink()));
                     break;
                 default:
-                    publics = new HashMap<>();
+                    break;
             }
-        } else {
-            publics = new HashMap<>();
         }
         return List.of(PublicPhotoAndVideoResponse.builder()
                 .publicationsPublic(publics)
                 .build());
+    }
+
+    @Override
+    public PublicPostResponse findPostPublic(Long postId) {
+        Publication publication = publicationRepository.findById(postId).orElseThrow(()->new NotFoundException(" Нет такой публикации !"));
+        List<CommentResponse> commentForResponse = commentRepository.getCommentForResponse(publication.getId());
+        commentForResponse.reversed();
+
+        List<LinkResponse> links = publication.getLinkPublications().stream()
+                .map(link -> new LinkResponse(link.getId(), link.getLink()))
+                .collect(Collectors.toList());
+
+        return new PublicPostResponse(
+                publication.getId(),
+                publication.getOwner().getId(),
+                publication.getOwner().getProfile().getAvatar(),
+                publication.getOwner().getThisUserName(),
+                publication.getPablicProfile().getTematica(),
+                publication.getLikes().size(),
+                links,
+                commentForResponse
+        );
     }
 
     private User getCurrentUser() {
